--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </a> <a href="https://github.com/maniamartial/EmployNanny" class="card mb-4 project-card">
+                        </a> <a href="https://employnanny.onrender.com/" class="card mb-4 project-card">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-4"> <img src="images/nanny.jpg" alt="Project 2 Screenshot" class="img-fluid"> </div>
