--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="projects.html">Projects</a></li>
                             <li><a href="experience.html">Experience</a></li>
+                               <li><a href="certifications\Mania Joseph CV.pdf">Resume</a></li>
                         </ul>
                     </div>
                     <div class="technologies mt-5 pt-5 text-center">
