Adding links to my projects

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>
                     <!--Project sections-->
                     <div class="project-section">
-                        <h2>Projects</h2> <a href="https://github.com/maniamartial/Ecommerce_Django" class="card mb-4 project-card">
+                        <h2>Projects</h2> <a href="https://wode.onrender.com/" class="card mb-4 project-card">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-4"> <img src="images/wode.jpg" alt="Project 1 Screenshot" class="img-fluid"> </div>
@@ -146,7 +146,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </a> <a href="https://github.com/maniamartial/EmployNanny" class="card mb-4 project-card">
+                        </a> <a href="https://employnanny.onrender.com/" class="card mb-4 project-card">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-4"> <img src="images/nanny.jpg" alt="Project 2 Screenshot" class="img-fluid"> </div>
