--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
                                 <!--end of tags-->
                             </div>
                         </div>
+ <div class="card mb-4">
+                            <div class="card-body">
+                                <div class="experience-header d-flex justify-content-between">
+                                    <div>
+                                        <h4>Upwork</h4>
+                                        <h5>Full-stack Developer, Freelancer</h5>
+                                    </div>
+                                    <p class="date">May 2020 - Present</p> <!-- Add the date here -->
+                                </div>
+                                <p> As a freelance Full-Stack Developer, I deliver end-to-end software solutions, emphasizing scalability and user experience. I design intuitive interfaces, implement robust server-side functionalities, and collaborate with cross-functional teams. From gathering requirements to efficient coding, testing, and deployment, I ensure high-quality deliverables. Adapting to new technologies, I enhance performance, scalability, and security. My experience highlights my ability to meet unique client requirements, deliver impactful solutions, and collaborate in dispersed teams. </p>
+                                <div class="tags">
+                                    <div class="tag">React</div>
+                                    <div class="tag">Django</div>
+                                    <div class="tag">Python</div>
+                                    <div class="tag">Nodejs</div>
+                                    <div class="tag">PostregreSQL</div>
+                                </div>
+                            </div>
+                            
+                        </div> 
                         <div class="card mb-4">
                             <div class="card-body">
                                 <div class="experience-header d-flex justify-content-between">
@@ -88,7 +108,7 @@
                                         <h4>Iconcept Media</h4>
                                         <h5>Technical Writer</h5>
                                     </div>
-                                    <p class="date">January - June 2020</p> <!-- Add the date here -->
+                                    <p class="date">January - June 2021</p> <!-- Add the date here -->
                                 </div>
                                 <p>Short description of what we were doing.</p>
                                 <ul>
@@ -106,26 +126,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card mb-4">
-                            <div class="card-body">
-                                <div class="experience-header d-flex justify-content-between">
-                                    <div>
-                                        <h4>Upwork</h4>
-                                        <h5>Full-stack Developer, Freelancer</h5>
-                                    </div>
-                                    <p class="date">March - August 2019</p> <!-- Add the date here -->
-                                </div>
-                                <p> As a freelance Full-Stack Developer, I deliver end-to-end software solutions, emphasizing scalability and user experience. I design intuitive interfaces, implement robust server-side functionalities, and collaborate with cross-functional teams. From gathering requirements to efficient coding, testing, and deployment, I ensure high-quality deliverables. Adapting to new technologies, I enhance performance, scalability, and security. My experience highlights my ability to meet unique client requirements, deliver impactful solutions, and collaborate in dispersed teams. </p>
-                                <div class="tags">
-                                    <div class="tag">React</div>
-                                    <div class="tag">Django</div>
-                                    <div class="tag">Python</div>
-                                    <div class="tag">Nodejs</div>
-                                    <div class="tag">PostregreSQL</div>
-                                </div>
-                            </div>
-                        </div>  <a href="certifications\Joseph Mania.pdf" class="btn"> View Full Resume <i class="bi bi-arrow-right"></i> </a>
+
+                        <a href="certifications\Mania Joseph CV.pdf" class="btn"> View Full Resume <i class="bi bi-arrow-right"></i> </a>
                     </div>
+
                     <!--Project sections-->
                     <div class="project-section">
                         <h2>Projects</h2> <a href="https://wode.onrender.com/" class="card mb-4 project-card">
@@ -146,7 +150,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </a> <a href="https://employnanny.onrender.com/" class="card mb-4 project-card">
+                        </a> <a href="https://employnannies.onrender.com/" class="card mb-4 project-card">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-4"> <img src="images/nanny.jpg" alt="Project 2 Screenshot" class="img-fluid"> </div>
